// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxOffcanvasTitle customize 1`] = `
<div>
  <div
    class="offcanvas-title bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxOffcanvasTitle component 1`] = `
<div>
  <h5
    class="offcanvas-title"
  />
</div>
`;
